--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,11 @@
     "description": "Create your own open-sourced software package easily.",
     "type": "library",
     "license": "MIT",
+    "homepage": "https://github.com/sepiphylabs/oss",
+    "support": {
+        "issues": "https://github.com/sepiphylabs/oss/issues",
+        "source": "https://github.com/sepiphylabs/oss"
+    },
     "authors": [
         {
             "name": "Quynh Xuan Nguyen",
@@ -11,6 +16,53 @@
             "role": "Software Developer"
         }
     ],
+    "require": {
+        "php": "^7.1.3"
+    },
+    "require-dev": {
+        "friendsofphp/php-cs-fixer": "^2.14",
+        "phpstan/phpstan": "^0.11.4",
+        "phpunit/phpunit": "^8.0",
+        "xuanquynh/php-codesniffer": "^1.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "SepiphyLabs\\Oss\\": "src/SepiphyLabs/Oss/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "SepiphyLabs\\Tests\\Oss\\": "tests/SepiphyLabs/Oss/"
+        }
+    },
+    "scripts": {
+        "post-autoload-dump": [
+            "XuanQuynh\\CodeSniffer\\ComposerScripts::postAutoloadDump"
+        ],
+        "fix": [
+            "@php vendor/bin/php-cs-fixer fix",
+            "@php vendor/bin/phpcbf src tests --standard=XuanQuynh"
+        ],
+        "test": [
+            "@php vendor/bin/phpcs src tests --standard=XuanQuynh",
+            "@php vendor/bin/phpstan analyse src --no-progress",
+            "@php vendor/bin/phpunit"
+        ]
+    },
+    "scripts-descriptions": {
+        "fix": "Fix coding convention by \"php-cs-fixer\" and \"phpcbf\" scripts.",
+        "test": "Check coding convention and static analysis. Finally, Run the tests."
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.0-dev"
+        }
+    },
+    "bin": ["bin/oss"],
+    "config": {
+        "sort-packages": true
+    },
     "minimum-stability": "dev",
-    "require": {}
+    "prefer-stable": true
+
 }
