--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     ],
     "require": {
         "php": "^7.1.3",
+        "illuminate/container": "5.8.*",
         "psr/container": "^1.0"
     },
     "require-dev": {
@@ -33,7 +34,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "SepiphyLabs\\Tests\\Oss\\": "tests/SepiphyLabs/Oss/"
+            "Tests\\SepiphyLabs\\Oss\\": "tests/SepiphyLabs/Oss/"
         }
     },
     "scripts": {
