--- a/composer.json
+++ b/composer.json
@@ -18,11 +18,12 @@
     ],
     "require": {
         "php": "^7.1.3",
-        "illuminate/container": "5.8.*",
-        "psr/container": "^1.0"
+        "symfony/console": "^4.2",
+        "sepiphy/phptools": "^0.3"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.14",
+        "mockery/mockery": "^1.2",
         "phpstan/phpstan": "^0.11.4",
         "phpunit/phpunit": "^8.0",
         "xuanquynh/php-codesniffer": "^1.0"
