--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -14,7 +14,7 @@
     verbose="true"
 >
     <testsuites>
-        <testsuite name="Sericode Test Suite">
+        <testsuite name="all">
             <directory suffix="Test.php">tests</directory>
         </testsuite>
     </testsuites>
