--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         "php": "^7.1.3"
     },
     "require-dev": {
-        "sepiphy/testing": "^0.5.0"
+        "sepiphy/testing": "^0.6.0"
     },
     "autoload": {
         "psr-4": {
@@ -33,11 +33,15 @@
     },
     "scripts": {
         "fix": [
-            "php-cs-fixer fix --ansi"
+            "php-cs-fixer fix --ansi",
+            "xphpcbf src tests --standard=XuanQuynh --colors"
         ],
         "test": [
+            "xphpcs src tests --standard=XuanQuynh --colors",
+            "phpstan analyse src tests --no-progress --ansi",
             "phpunit --colors=always"
         ]
+
     },
     "extra": {
         "branch-alias": {
