--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -2,39 +2,23 @@ name: Tests
 
 on:
   push:
-    branches: [master]
   pull_request:
-    branches: [master]
 
 jobs:
   test:
-    name: Test
     runs-on: ubuntu-latest
 
     strategy:
       matrix:
-        php: ["7.1", "7.2", "7.3", "7.4"]
+        php: ["7.4", "8.0"]
+
     steps:
       - uses: actions/checkout@v2
 
-      - name: Validate composer.json and composer.lock
-        run: composer validate
-
-      - name: Cache Composer packages
-        id: composer-cache
-        uses: actions/cache@v2
-        with:
-          path: vendor
-          key: ${{ runner.os }}-node-${{ hashFiles('**/composer.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
-
-      - name: Install dependencies
-        if: steps.composer-cache.outputs.cache-hit != 'true'
+      - name: Install php dependencies
         run: composer install --prefer-dist --no-progress --no-suggest
 
-      - name: Run lint script
-        run: composer run lint
-
-      - name: Run test script
-        run: composer run test
+      - name: Run test scripts
+        run: |
+          composer run lint
+          composer run test
