--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "seriquynh/php-package-template",
     "description": "PHP Package Template",
-    "type": "project",
+    "type": "library",
     "license": "MIT",
     "keywords": [
         "template",
@@ -20,7 +20,7 @@
         }
     ],
     "require": {
-        "php": ">=7.1.3"
+        "php": ">=7.4"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.14",
@@ -34,11 +34,6 @@
     "autoload": {
         "psr-4": {
             "Seriquynh\\PackageTemplate\\": "src/"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "Tests\\Unit\\Seriquynh\\PackageTemplate\\": "tests/unit/"
         }
     },
     "scripts": {
